# camelX

./: .gitignore  LICENSE  Makefile  README.md  benchmark.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  python-package.yml
camel/tests/: test_general.py
camelx/: __init__.py
camelx/tests/: test_docs.py  test_general.py
